<resources>
    <string name="app_name">SwasthGarbh</string>
    <string name="patient_register">Patient</string>
    <string name="doctor_register">Doctor</string>
    <string name="signin_button">Sign In</string>
    <string name="copyright">Developed by CompBio Lab, IIT Roorkee</string>
    <string name="statusOfPatientState">The complexity of this state</string>
    <string name="whoGraphDescription">Graph showing the women who follow the WHO Guidelines during their pregnancy</string>
    <string name="PieChartDesc">(Distribution of #patients on various factors)</string>
    <string name="PirChartDesc">This is Pie Chart</string>
    <string name="or_register_as">or Register as</string>
    <string name="name">Name</string>
    <string name="doctor">Doctor</string>
    <string name="doctors_mobile">Doctors Mobile</string>
    <string name="pregnancy_start">Pregnancy EDD</string>
    <string name="who_medication">WHO Medication</string>
    <string name="add_data">Add Data</string>
    <string name="who">Tests</string>
    <string name="medication">Medication</string>
    <string name="your_history">Your History</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="systole">Systolic BP</string>
    <string name="diastole">Diastolic BP</string>
    <string name="headache">Headache</string>
    <string name="abdominal_pain">Abdominal Pain</string>
    <string name="visual_problems">Visual Problems</string>
    <string name="decreased_fetal_movements">Decreased Fetal Movements</string>
    <string name="swelling_in_hands_or_face">Swelling in Hands or Face</string>
    <string name="hypertension">Hypertension</string>
    <string name="urine_albumin">Urine Albumin</string>
    <string name="bleeding_per_vaginum">Bleeding per vaginum</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="in_beats_minute">in Beats/Minute</string>
    <string name="body_weight">Body Weight</string>
    <string name="in_kg">in Kg</string>
    <string name="extra_comments_complications">Extra Comments / Complications</string>
    <string name="something_you_want_doctor_to_know">Something you want doctor to know</string>
    <string name="upload_photo">Upload photo</string>
    <string name="send">Send</string>
    <string name="period">Period</string>
    <string name="starting_from">Starting from :</string>
    <string name="to_be_taken_till">To be taken till :</string>
    <string name="diabetese">Diabetes</string>
    <string name="anaemia">Anaemia</string>
    <string name="hiv">HIV</string>
    <string name="ultrasound">Ultrasound</string>
    <string name="tetnus">Tetnus</string>
    <string name="urine_test">Urine Test</string>
    <string name="diabeteseAssist">&#9900; Diabetes</string>
    <string name="anaemiaAssist">&#9900; Anaemia</string>
    <string name="hivAssist">&#9900; HIV</string>
    <string name="ultrasoundAssist">&#9900; Ultrasound</string>
    <string name="tetnusAssist">⚬ Tetanus</string>
    <string name="urine_testAssist">&#9900; Urine Test</string>
    <string name="update_my_data">Update My Data</string>
    <string name="lmp">LMP</string>
    <string name="edd">EDD</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBadggeNkbB7NwvBo_htgmzVEC2vmRJbNg</string>
    <string-array name="medicine_freq">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="title_activity_all_images_view" translatable="false">all_images_view</string>
    <string name="address">Address (Optional)</string>
    <string name="age_in_years">Age (in years)</string>
    <string name="age_not_years">Age</string>
    <string name="last_mesntural_period">Last Menstrual Period</string>
    <string name="date">Date</string>
    <string name="some_extra_details_optional">Some extra details (Optional)</string>
    <string name="history_of_high_blood_pressure_prior_to_pregnancy">History of high blood pressure prior to pregnancy</string>
    <string name="a_history_of_preeclampsia">A history of preeclampsia</string>
    <string name="having_a_mother_or_sister_who_had_preeclampsia">Having a mother or sister who had preeclampsia</string>
    <string name="a_history_of_obesity">A history of obesity</string>
    <string name="carrying_more_than_one_baby">Carrying more than one baby</string>
    <string name="history_of_diabetes_kidney_disease_lupus_or_rheumatoid_arthritis">History of diabetes, kidney disease, lupus, or rheumatoid arthritis</string>
    <string name="your_credentials">Your credentials</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="doctor_s_number">Registered Doctor\'s Number</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="register">Register</string>
    <string name="aboutdef1">Preeclampsia is a pregnancy complication characterized by high blood pressure and signs of damage to another organ system, most often the liver and kidneys. Preeclampsia usually begins after 20 weeks of pregnancy in women whose blood pressure had been normal. Left untreated, preeclampsia can lead to serious — even fatal — complications for both you and your baby. If you have preeclampsia, the most effective treatment is delivery of your baby. Even after delivering the baby, it can still take a while for you to get better.\n\nIf you\'re diagnosed with preeclampsia too early in your pregnancy to deliver your baby, you and your doctor face a challenging task. Your baby needs more time to mature, but you need to avoid putting yourself or your baby at risk of serious complications.\n\nRarely, preeclampsia develops after delivery of a baby, a condition known as postpartum preeclampsia.</string>
    <string name="change_doctor">Change/Add doctor</string>
    <string name="notifications">Notifications</string>
    <string name="nearby_hospitals">Nearby Hospitals</string>
    <string name="about_preeclapmsia">About Preeclampsia</string>
    <string name="logout">Logout</string>
    <string name="disc1" translatable="false">Privacy Policy\n\nComputational Lab IIT-Roorkee built the SwasthGarbh app as a Free app. This SERVICE is provided by Computational Lab IIT-Roorkee at no cost and is intended for use as is.\n\nThis page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.\n\nIf you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at SwasthGarbh unless otherwise defined in this Privacy Policy.</string>
    <string name="disc2" translatable="false">Information Collection and Use\n\nFor a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to blood pressure, weight and other medical information. The information that we request will be retained by us and used as described in this privacy policy.\n\nThe app does use third party services that may collect information used to identify you.\n\nLink to privacy policy of third party service providers used by the app\n\n[Google Play Services](https://www.google.com/policies/privacy/)\n[Firebase Analytics](https://firebase.google.com/policies/analytics)</string>
    <string name="disc3" translatable="false">Log Data\n\nWe want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="disc4" translatable="false">Cookies\n\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="disc5" translatable="false">Service Providers\n\nWe may employ third-party companies and individuals due to the following reasons:\n\nTo facilitate our Service\nTo provide the Service on our behalf\nTo perform Service-related services, or\nTo assist us in analyzing how our Service is used.\n\nWe want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="disc6" translatable="false">Security\n\nWe value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="disc7" translatable="false">Links to Other Sites\n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="disc8" translatable="false">Children’s Privacy\n\nThese Services do not address anyone under the age of 13\. We do not knowingly collect personally identifiable information from children under 13\. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.</string>
    <string name="disc9" translatable="false">Changes to This Privacy Policy\n\nWe may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
</resources>