<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/empty"
        android:title="hello"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_more">

        <menu>


            <item android:id="@+id/action_notification"
                android:icon="@drawable/bell"
                app:showAsAction="ifRoom"
                android:title="@string/notifications" />

            <item android:id="@+id/hospitalsNearYou"
                android:icon="@drawable/map"
                app:showAsAction="ifRoom"
                android:title="@string/nearby_hospitals" />

            <item android:id="@+id/patientImages"
                android:icon="@drawable/imagemenu"
                app:showAsAction="ifRoom"
                android:title="Complication Images" />

            <item android:id="@+id/action_change_doctor"
                android:icon="@drawable/arrows"
                app:showAsAction="ifRoom"
                android:title="@string/change_doctor" />

            <item android:id="@+id/aboutPre"
                android:icon="@drawable/faq"
                app:showAsAction="ifRoom"
                android:title="@string/about_preeclapmsia" />

            <item android:id="@+id/action_logout"
                android:icon="@drawable/logout"
                app:showAsAction="ifRoom"
                android:title="@string/logout" />

        </menu>

    </item>

</menu>