<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/colortheme"
    android:orientation="vertical"
    app:backgroundTint="@color/colortheme"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="310dp"
            android:layout_height="214dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="TODO"
            android:src="@drawable/unnamed" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="40sp" />

        <Button
            android:id="@+id/signin_modal"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/signin_button"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/offlineAnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25sp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="ANC Assist ⓘ"
            android:textAllCaps="false"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/or_register_as"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/pregnanticon" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/doctoricon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/patient_registration"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:layout_weight="1"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:text="@string/patient_register"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/doctor_registration"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:layout_weight="1"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:text="@string/doctor_register"
                android:textAllCaps="false" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:text="@string/copyright"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="Disclaimer"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>

